--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,14 @@
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-
-spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
+#spring.profiles.active=test
 
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 # Datasource
-#spring.datasource.url=jdbc:h2:file:/testdb
-#spring.datasource.url=jdbc:h2:file:/home/wolmir/dbh2teset
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:file:~/coomper
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
