--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# RabbitMQ
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = admin
+spring.rabbitmq.password = admin
+rabbitmq.queue.name=fila-resultado-votacao
+rabbitmq.exchange.name=exchange-resultado-votacao
+rabbitmq.routing.key=routing-resultado-votacao
