Add envio do resultado usando mensageria - rabbitMQ.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5672
 spring.rabbitmq.username = admin
-spring.rabbitmq.password = admin
+spring.rabbitmq.password = guest
 rabbitmq.queue.name=fila-resultado-votacao
 rabbitmq.exchange.name=exchange-resultado-votacao
 rabbitmq.routing.key=routing-resultado-votacao
