--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # RabbitMQ
 spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5672
-spring.rabbitmq.username = admin
+spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
 rabbitmq.queue.name=fila-resultado-votacao
 rabbitmq.exchange.name=exchange-resultado-votacao
